--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.coolweather.app.activity.WeatherActivity"></activity>
+        <activity android:name="com.coolweather.app.activity.WeatherActivity" >
+        </activity>
+
+        <receiver android:name="com.coolweather.app.receiver.AutoUpdateReceiver" >
+        </receiver>
+
+        <service android:name="com.coolweather.app.service.AutoUpdateService" >
+        </service>
     </application>
 
 </manifest>
